<resources>
    <string name="app_name">Seven Wonders Duel</string>
    <string name="board_description">Board</string>
    <string name="conflict_pawn_position">Conflict pawn position</string>
    <string name="first_player_military_token_2_coins">Loot 2 coins to first player</string>
    <string name="first_player_military_token_5_coins">Loot 5 coins to first player</string>
    <string name="second_player_military_token_2_coins">Loot 2 coins to second player</string>
    <string name="second_player_military_token_5_coins">Loot 5 coins to second player</string>
    <string name="discard_pile">Discard pile</string>
    <string name="plus_coins">+%d</string>
    <string name="minus_coins">-%d</string>
    <string name="let_opponent_start_new_age">Laisser %s commencer</string>

    <string name="player_must_wait">%s attend son tour</string>
    <string name="player_must_take_a_wonder">%s doit prendre une merveille</string>
    <string name="player_must_play_a_card">%s doit jouer une carte accessible de la structure</string>
    <string name="player_must_choose_a_progress_token">%s doit choisir un jeton progrès</string>
    <string name="player_must_destroy_a_raw_material_building">%s doit détruire un bâtiment de production marron de %s</string>
    <string name="player_must_destroy_a_manufacture_building">%s doit détruire un bâtiment de production gris de %s</string>
    <string name="player_must_construct_a_building_from_the_discard">%s construit gratuitement un des bâtiments défaussés</string>
    <string name="player_win_by_military_supremacy">%s gagne par suprématie militaire !</string>
    <string name="player_win_by_scientific_supremacy">%s gagne par suprématie scientifique !</string>
    <string name="player_civilian_victory">%s remporte une victoire civile, avec %d points de victoire !</string>
    <string name="player_short_civilian_victory">%s remporte de peu une victoire civile, avec %d points de victoire et plus de points que %s avec ses bâtiments civiques !</string>
    <string name="player_lost_by_military_supremacy">%s a perdu, terrassé par les armées de %s</string>
    <string name="player_lost_by_scientific_supremacy">%s a perdu, dépassé par les progrès scientifiques de %s</string>
    <string name="player_civilian_defeat">%s a perdu, avec %d points de victoire</string>
    <string name="player_short_civilian_defeat">%s a perdu de justesse, avec %d points de victoire, mais moins de points que %s avec ses bâtiments civiques</string>
    <string name="player_equality">Egalité parfaite ! Chaque joueur a %d point de victoire, dont %d grâce aux bâtiments civiques</string>

    <string name="wonders_back">A wonder card face down</string>
    <string name="circus_maximus">Circus Maximus</string>
    <string name="piraeus">Piraeus</string>
    <string name="the_appian_way">The Appian Way</string>
    <string name="the_colossus">The Colossus</string>
    <string name="the_great_library">The Great Library</string>
    <string name="the_great_lighthouse">The Great Lighthouse</string>
    <string name="the_hanging_gardens">The Hanging Gardens</string>
    <string name="the_mausoleum">The Mausoleum</string>
    <string name="the_pyramids">The Pyramids</string>
    <string name="the_sphinx">The Sphinx</string>
    <string name="the_statue_of_zeus">The Statue of Zeus</string>
    <string name="the_temple_of_artemis">The Temple of Artemis</string>

    <string name="progress_agriculture">Agriculture</string>
    <string name="progress_architecture">Architecture</string>
    <string name="progress_economy">Economy</string>
    <string name="progress_law">Law</string>
    <string name="progress_masonry">Masonry</string>
    <string name="progress_mathematics">Mathematics</string>
    <string name="progress_philosophy">Philosophy</string>
    <string name="progress_strategy">Strategy</string>
    <string name="progress_theology">Theology</string>
    <string name="progress_urbanism">Urbanism</string>

    <string name="age_1_back">An age I card face down</string>
    <string name="age_2_back">An age II card face down</string>
    <string name="age_3_back">An age III card face down</string>
    <string name="guild_back">A guild card face down</string>

    <string name="lumber_yard">Lumber yard</string>
    <string name="logging_camp">Logging camp</string>
    <string name="clay_pool">Clay pool</string>
    <string name="clay_pit">Clay pit</string>
    <string name="quarry">Quarry</string>
    <string name="stone_pit">Stone pit</string>
    <string name="glassworks">Glassworks</string>
    <string name="press">Press</string>
    <string name="guard_tower">Guard tower</string>
    <string name="stable">Stable</string>
    <string name="garrison">Garrison</string>
    <string name="palisade">Palisade</string>
    <string name="workshop">Workshop</string>
    <string name="apothecary">Apothecary</string>
    <string name="scriptorium">Scriptorium</string>
    <string name="pharmacist">Pharmacist</string>
    <string name="theater">Theater</string>
    <string name="altar">Altar</string>
    <string name="baths">Baths</string>
    <string name="stone_reserve">Stone reserve</string>
    <string name="clay_reserve">Clay reserve</string>
    <string name="wood_reserve">Wood reserve</string>
    <string name="tavern">Tavern</string>

    <string name="sawmill">Sawmill</string>
    <string name="brickyard">Brickyard</string>
    <string name="shelf_quarry">Shelf quarry</string>
    <string name="glassblower">Glassblower</string>
    <string name="drying_room">Drying room</string>
    <string name="walls">Walls</string>
    <string name="horse_breeders">Horse breeders</string>
    <string name="barracks">Barracks</string>
    <string name="archery_range">Archery range</string>
    <string name="parade_ground">Parade ground</string>
    <string name="library">Library</string>
    <string name="dispensary">Dispensary</string>
    <string name="school">School</string>
    <string name="laboratory">Laboratory</string>
    <string name="courthouse">Courthouse</string>
    <string name="statue">Statue</string>
    <string name="temple">Temple</string>
    <string name="aqueduct">Aqueduct</string>
    <string name="rostrum">Rostrum</string>
    <string name="forum">Forum</string>
    <string name="caravansery">Caravansery</string>
    <string name="customs_house">Customs house</string>
    <string name="brewery">Brewery</string>

    <string name="arsenal">Arsenal</string>
    <string name="pretorium">Pretorium</string>
    <string name="fortifications">Fortifications</string>
    <string name="siege_workshop">Siege workshop</string>
    <string name="circus">Circus</string>
    <string name="academy">Academy</string>
    <string name="study">Study</string>
    <string name="university">University</string>
    <string name="observatory">Observatory</string>
    <string name="palace">Palace</string>
    <string name="town_hall">Town hall</string>
    <string name="obelisk">Obelisk</string>
    <string name="gardens">Gardens</string>
    <string name="pantheon">Pantheon</string>
    <string name="senate">Senate</string>
    <string name="chamber_of_commerce">Chamber of commerce</string>
    <string name="port">Port</string>
    <string name="armory">Armory</string>
    <string name="lighthouse">Lighthouse</string>
    <string name="arena">Arena</string>

    <string name="merchants_guild">Merchants guild</string>
    <string name="shipowners_guild">Shipowners guild</string>
    <string name="builders_guild">Builders guild</string>
    <string name="magistrate_guild">Magistrate guild</string>
    <string name="scientists_guild">Scientists guild</string>
    <string name="moneylenders_guild">Moneylenders guild</string>
    <string name="tacticians_guild">Tacticians guild</string>
</resources>
