<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.GameActivity">

    <ImageView
        android:id="@+id/board"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/board_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/board" />

    <TextView
        android:id="@+id/firstPlayerCoins"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/coin"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/board"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/secondPlayerCoins"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/coin"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/board"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/conflictPawn"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/conflict_pawn_position"
        app:layout_constraintBottom_toBottomOf="@+id/board"
        app:layout_constraintEnd_toEndOf="@+id/board"
        app:layout_constraintStart_toStartOf="@+id/board"
        app:layout_constraintTop_toTopOf="@+id/board"
        app:srcCompat="@drawable/shield" />

    <ImageView
        android:id="@+id/loot2player1"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginStart="78dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/first_player_military_token_2_coins"
        app:layout_constraintBottom_toBottomOf="@+id/board"
        app:layout_constraintStart_toStartOf="@+id/board"
        app:srcCompat="@drawable/loot_token_2" />

    <ImageView
        android:id="@+id/loot5player1"
        android:layout_width="34dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="34dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/first_player_military_token_5_coins"
        app:layout_constraintBottom_toBottomOf="@+id/board"
        app:layout_constraintStart_toStartOf="@+id/board"
        app:srcCompat="@drawable/loot_token_5" />

    <ImageView
        android:id="@+id/loot2player2"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="78dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/second_player_military_token_2_coins"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/board"
        app:layout_constraintEnd_toEndOf="@+id/board"
        app:srcCompat="@drawable/loot_token_2" />

    <ImageView
        android:id="@+id/loot5player2"
        android:layout_width="34dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="34dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/second_player_military_token_5_coins"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/board"
        app:layout_constraintEnd_toEndOf="@+id/board"
        app:srcCompat="@drawable/loot_token_5" />

    <ImageView
        android:id="@+id/discard"
        android:layout_width="37dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/discard_pile"
        app:layout_constraintStart_toStartOf="@+id/board"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/discard" />

</android.support.constraint.ConstraintLayout>